# databricks-dataops-template

./: .gitignore  CLAUDE.md  Makefile  README.md  databricks.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: check-databricks-config.sh
.devcontainer/spark-conf/: spark-defaults.conf
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  pr-cleanup.yml
ci/: README.md
contracts/: customer_order_summary.yml  customers_silver.yml  orders_silver.yml
dashboards/: data_product_operations.lvdash.json
data/sample/customers/: customers.csv
data/sample/orders/: orders.csv
docs/: architecture.md  ci-cd.md  observability.md  platform-prerequisites.md  runbook.md  setup.md
docs/patterns/: backfill.md  cdc.md  schema-migration.md
fixtures/: expected_counts.yml
local-dev/: customers_pipeline.yml  gold_pipeline.yml  orders_pipeline.yml
mutators/: tags.py
platform/: README.md  databricks.yml
repo-context/: databricks-dataops-template-summary.md
resources/: customers_pipeline.yml  data_product_operational_job.yml  gold_pipeline.yml  ops_dashboard.yml  orders_pipeline.yml  schemas.yml  volumes.yml
scripts/: changed_files.py
src/data_product/domains/customers/: rules.py  transformations.py
src/data_product/domains/gold/: rules.py  transformations.py
src/data_product/domains/orders/: rules.py  transformations.py
src/data_product/pipelines/: customers_pipeline.py  finalize_ops_status.py  gold_pipeline.py  orders_pipeline.py  validate_gold_contract.py  validate_silver_readiness.py
tests/: conftest.py  test_customers_transformations.py  test_gold_transformations.py  test_imports.py  test_orders_transformations.py
