[project]
name = "databricks-dataops-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.106.0",
    "pyspark[pipelines]>=4.1.1",
    "databricks-bundles>=0.299.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/data_product/pipelines/validate_*.py" = ["F821"]
