[project]
name = "databricks-dataops-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.117.0",
    "pyspark[pipelines]>=4.1.2",
    "databricks-bundles>=1.3.0",
]

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_product"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/data_product/pipelines/*.py" = ["F821"]
